<?xml version="1.0" encoding="utf-8"?><!--suppress ALL -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_corner_background"
    tools:context="ankit.com.timetable.Home">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetEnd="0dp"
        app:contentInsetEndWithActions="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <TextView
            android:id="@+id/title"
            fontPath="fonts/Montserrat-Medium.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:overScrollMode="never"
            android:paddingStart="48dp"
            android:text="@string/time_table_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/bluebird"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/day_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tb_home"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <ImageButton
            android:layout_marginStart="10dp"
            android:id="@+id/previous"
            fontPath="fonts/Montserrat-Medium.otf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/previous_button"
            android:background="@drawable/button"
            android:onClick="onPrevClick"
            android:padding="5dp"
            app:srcCompat="@drawable/arrow_left"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dayname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/day_name_placeholder"
            android:textAlignment="center"
            android:textColor="@color/bluebird"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/next"
            android:layout_marginEnd="10dp"
            fontPath="fonts/Montserrat-Medium.otf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next_button"
            android:background="@drawable/button"
            android:onClick="onNextClick"
            android:padding="5dp"
            app:srcCompat="@drawable/arrow_right"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/main_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/day_tab"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:overScrollMode="never"
        android:scrollIndicators="none"
        android:scrollbars="none"
        tools:listitem="@layout/home_list_row"
        tools:targetApi="m" />

    <ImageView
        android:id="@+id/empty_view"
        android:contentDescription="@string/default_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_list"
        android:layout_gravity="center"
        android:padding="60dp"
        android:scaleType="fitCenter"
        android:src="@drawable/empty_view"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
</RelativeLayout>
